rust/tests/snapshots/test_nom_from_file__test.snap
---
source: tests/test_nom_from_file.rs
expression: parsed
---
name: " classroomAssignmentSP "
sense: Maximize
objectives:
  obj:
    name: obj
    coefficients:
      - name: x1
        value: 1
      - name: sdfdf5343
        value: 1
constraints:
  c1:
    type: Standard
    name: c1
    coefficients:
      - name: x1
        value: 2
    operator: LTE
    rhs: 1
  c2:
    type: Standard
    name: c2
    coefficients:
      - name: x2
        value: -3.01
      - name: x3
        value: 6
    operator: EQ
    rhs: 1
  c2b:
    type: Standard
    name: c2b
    coefficients:
      - name: x2x3x4
        value: -3.0000000002
    operator: EQ
    rhs: 1
variables:
  qwer:
    name: qwer
    var_type:
      DoubleBound:
        - -inf
        - inf
  sdfdf5343:
    name: sdfdf5343
    var_type: Free
  x1:
    name: x1
    var_type: Free
  x2:
    name: x2
    var_type:
      LowerBound: 1
  x2dfsdf:
    name: x2dfsdf
    var_type:
      DoubleBound:
        - 100
        - -1
  x2x3x4:
    name: x2x3x4
    var_type: Free
  x3:
    name: x3
    var_type: Free
